--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,7 +2,7 @@ name: AuxeltusSqlDataAccess - Build and Test
 on:
   push:
     branches:
-    - master
+    - main
 env:
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
