--- a/.github/workflows/sql-access-validation.yml
+++ b/.github/workflows/sql-access-validation.yml
@@ -1,8 +1,10 @@
 name: AuxeltusSqlDataAccess - Build and Test
 on:
-  push:
-    branches:
-    - main
+  pull_request:
+    paths:
+    - 'AuxeltusSqlDataAccess/**'
+    - 'AuxeltusSqlDataAccessTests/**'
+
 env:
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
