--- a/AuxeltusSqlDataAccess/AuxeltusSqlDataAccess.csproj
+++ b/AuxeltusSqlDataAccess/AuxeltusSqlDataAccess.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
+    <RootNamespace>Auxeltus.AccessLayer.Sql</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
+  </ItemGroup>
 
 </Project>
