--- a/AuxeltusSqlDataAccess/AuxeltusSqlDataAccess.csproj
+++ b/AuxeltusSqlDataAccess/AuxeltusSqlDataAccess.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
