--- a/AuxeltusApi/AuxeltusApi.csproj
+++ b/AuxeltusApi/AuxeltusApi.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AuxeltusSqlDataAccess\AuxeltusSqlDataAccess.csproj" />
