Refine logging structure

--- a/AuxeltusApi/appsettings.json
+++ b/AuxeltusApi/appsettings.json
@@ -1,20 +1,26 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning",
+      "Microsoft": "None",
+      "Microsoft.Hosting.Lifetime": "None",
+      "Microsoft.AspNetCore.Hosting.Diagnostics": "None"
+    },
+    "EventLog": {
+      "LogLevel": {
+        "Microsoft.AspNetCore.Hosting.Diagnostics": "None"
+      }
+    }
+  },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console"],
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Information",
     "WriteTo": [
       { "Name": "Console" }
     ],
-    "Properties": {
-      "Application": "AuxeltusApi"
+    "Override": {
+      "Microsoft": "None",
+      "Microsoft.AspNetCore": "None",
+      "System": "None"
     }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+  }
 }
